Build optimizations